# keiba-solo-db

./: .flake8  .gitignore  DS_CRITICAL_IMPROVEMENTS.md  LOCAL_TEST_RESULTS.md  README.md  claude.md  lint.bat  lint.sh  mypy.ini  pyproject.toml  requirements.txt  streamlit.toml  test_betting_optimizer.py  test_csv_export.py  test_ds_improvements.py
.claude/: settings.local.json
.github/workflows/: backfill.yml  weekly_cards.yml  weekly_results.yml
app/: Home.py  backtest.py  betting_optimizer.py  charts.py  csv_export.py  data_leakage_validator.py  db.py  feature_diagnostics.py  features.py  kelly_precondition_validator.py  model_metrics_analyzer.py  model_training_enhanced.py  prediction_model.py  prediction_model_lightgbm.py  progress_utils.py  queries.py  schema_migration.py  sidebar_utils.py  test_data.py
app/pages/: 2_FutureRaces.py  3_DataExport.py  4_ModelTraining.py  5_Prediction.py  6_Prediction_Enhanced.py  7_Horse.py  8_Race.py  DataExport.py  FutureRaces.py  Horse.py  Race.py  (+2 more)
data/: keiba.db  prediction_model_advanced.pkl  prediction_scaler_advanced.pkl
docs/: API.md  ARCHITECTURE.md  BETTING_OPTIMIZATION_GUIDE.md  CRITICAL_IMPROVEMENTS_IMPLEMENTED.md  DEVELOPMENT.md  DS_REVIEW.md  INDEX.md  STREAMLIT_CACHE_FIX.md  TESTING.md
etl/: apply_alias.py  base.py  upsert_entry.py  upsert_master.py  upsert_race.py
metrics/: build_horse_metrics.py
scraper/: __init__.py  fetch_calendar.py  fetch_card.py  fetch_future_races.py  fetch_result.py  rate_limit.py  selectors.py
sql/: schema.sql
tests/: __init__.py  test_pipeline.py  test_prediction_page.py
