[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keiba-solo-db"
version = "1.0.0"
description = "Horse racing prediction system with SQLite and Streamlit"
authors = [{name = "Development Team"}]
requires-python = ">=3.9"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

# 外部ライブラリの型チェックをスキップ
[[tool.mypy.overrides]]
module = [
    "streamlit",
    "plotly",
    "sklearn.*",
    "pandas",
    "numpy",
    "requests",
    "bs4",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503, E501"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    ".eggs"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"
